[package]
name = "lazypoline-rs"
version = "0.2.0"
authors = ["Thomas Q <thomasqsa@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
readme = "README.md"
description = "A framework for building syscall interposers for user-space Linux applications"

[lib]
name = "lazypoline_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
lazypoline-macros = { version = "0.2.0", path = "./lazypoline-macros" }
libc = { version = "0.2", features = ["extra_traits"] }
nix = "0.29"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"
anyhow = "1.0"

[build-dependencies]
cc = "1.2"

[workspace]
resolver = "3"
members = [".", "bootstrap", "lazypoline-macros"]

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
