[package]
name = "lazypoline-bootstrap"
version = "0.1.0"
authors = ["Thomas Q <thomasqsa@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
description = "Bootstrap loader for the lazypoline-rs framework"

[lib]
name = "bootstrap"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
