[package]
name = "lazypoline-macros"
version = "0.2.0"
authors = ["Thomas Q <thomasqsa@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
description = "Proc macros for the lazypoline-rs framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
